add 11tydata js

--- a/src/scss/blocks/_pill.scss
+++ b/src/scss/blocks/_pill.scss
@@ -3,11 +3,10 @@
     display: inline-block;
     vertical-align: middle;
     line-height: 1;
-    padding: 0.55rem 0.7rem;
-    border: 1px solid black;
+    padding: 3px 6px;
     border-radius: 1em;
-    background-color: green;
-    color: whitesmoke;
+    background-color: #48f1ab;
+    color: black;
     cursor: pointer;
     appearance: none;
 }
