--- a/src/site/_includes/partials/head.njk
+++ b/src/site/_includes/partials/head.njk
@@ -5,6 +5,9 @@
 <title>{{ subtitleText }}</title>
 <link rel="stylesheet" href="/css/kurva.css">
 
+{% Meta page, renderData %}
+
 <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
 <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+
