--- a/src/scss/kurva.scss
+++ b/src/scss/kurva.scss
@@ -151,6 +151,7 @@ pre > code {
 @import 'pages/akses-page';
 @import 'pages/source-page';
 @import 'pages/homepage';
+@import 'pages/signin-page';
 @import 'pages/feeds/model-dan-grid.scss';
 @import 'pages/feeds/iklan-majalah.scss';
 @import 'pages/feeds/jadwal-elegan-bandara.scss';
