--- a/src/site/content/get-started/index.njk
+++ b/src/site/content/get-started/index.njk
@@ -5,6 +5,8 @@ pageScripts:
     - '/js/get-started.js'
 ---
 
-<div class="wrapper">
+<div class="wrapper registration-page w-stack">
+<h2>Sign up for an account</h2>
 <kurva-register-user></kurva-register-user>
+<p>Already have an account? <a href="/sign-in">Sign In</a></p>
 </div>
