we even added privacy policy

--- a/src/scss/kurva.scss
+++ b/src/scss/kurva.scss
@@ -152,6 +152,7 @@ pre > code {
 @import 'pages/source-page';
 @import 'pages/homepage';
 @import 'pages/signin-page';
+@import 'pages/checkout-page';
 @import 'pages/feeds/model-dan-grid.scss';
 @import 'pages/feeds/iklan-majalah.scss';
 @import 'pages/feeds/jadwal-elegan-bandara.scss';
