--- a/src/site/_includes/layouts/index-page.njk
+++ b/src/site/_includes/layouts/index-page.njk
@@ -35,7 +35,7 @@ eleventyComputed:
 
                 <h1>{{ feed.data.title }}</h1>
             </a>
-            <a href="{{ feed.url }}">Kunci Jawaban</a>
+            <a href="{{ feed.url }}">Source Key</a>
 
             {% if feed.data.tags %}
                 <div class="card__tags cluster gap-top-base" aria-label="tags for this page">
