--- a/src/site/_includes/macros/feed-card.njk
+++ b/src/site/_includes/macros/feed-card.njk
@@ -15,7 +15,7 @@
 
                 <h2>{{ param.title }}</h2>
             </a>
-            <a href="{{ param.jurnal }}">Kunci Jawaban</a>
+            <a href="{{ param.jurnal }}">Source Key</a>
 
             {% if param.tags %}
                 <div class="card__tags cluster gap-top-base" aria-label="tags for this page">
