--- a/src/site/_includes/partials/site-footer.njk
+++ b/src/site/_includes/partials/site-footer.njk
@@ -5,9 +5,9 @@
         <div class="w-footer">
             <ul class="w-footer__linkbox-list">
                 <li>
-                    <a href="https://literasi.blog"
+                    <a href="https://kicikku.com"
                         data-category="Site-Wide Custom Events" data-label="Footer Link (index 1)">
-                        By @literasibadguy
+                        Developed by KICIKKU
                     </a>
                 </li>
                 <li>
@@ -27,15 +27,14 @@
             <h3>Social</h3>
             <ul class="w-footer__linkbox-list">
                 <li>
-                    <a href="https://literasi.blog"
+                    <a target="_blank" href="https://instagram.com/kicikku"
                         data-category="Site-Wide Custom Events" data-label="Footer Link (index 1)">
-                        By @literasibadguy
+                        @kicikku
                     </a>
                 </li>
                 <li>
                     <a href="/"
                         data-category="Site-Wide Custom Events" data-label="Footer Link (index 1)">
-                        Instagram
                     </a>
                 </li>
             </ul>
@@ -44,7 +43,12 @@
     <nav class="site-footer__brand-nav">
         <ul class="cluster" role="list">
             <li>
-                <h3>© 2022 Kurva by literasibadguy and KICIKKU. Images for material contents are the respective owners</h3>
+                <h3>© 2022 Kurva by KICIKKU. Images for material contents are the respective owners</h3>
+            </li>
+            <li>
+                <a href="/privacy-policy">
+                    Privacy Policy
+                </a>
             </li>
         </ul>
     </nav>
