--- a/src/site/_includes/partials/site-header.njk
+++ b/src/site/_includes/partials/site-header.njk
@@ -1,6 +1,10 @@
 
 <header class="site-header">
+        <div>
+            
+        </div>
         <a class="site-header__brand" href="/">
             <h2>Kurva</h2>
         </a>
+        <account-header></account-header>
 </header>
