--- a/src/site/_includes/layouts/source-page.html
+++ b/src/site/_includes/layouts/source-page.html
@@ -31,12 +31,14 @@ pageScripts:
         </header>
 
         <div class="w-stack">
-            {{ content |  safe }}
-        <div class="source__footnote">
-            <p>Kunci atau sumber kode hanya menggambarkan eksplorasi untuk membuat setiap halaman HTML</p>
-            <p>Bukan suatu standar pasti untuk kode di atas, modifikasi dan ekspresi sendiri sangat rekomendasi
+            <div class="content-code">
+                 {{ content |  safe }}
+            </div>
+            <div class="source__footnote">
+                <p>Kunci atau sumber kode hanya menggambarkan eksplorasi untuk membuat setiap halaman HTML</p>
+                <p>Bukan suatu standar pasti untuk kode di atas, modifikasi dan ekspresi sendiri sangat rekomendasi
                 untuk belajar desain CSS</p>
-        </div>
+            </div>
         </div>
     </div>
 </div>
