--- a/src/scss/components/_stack.scss
+++ b/src/scss/components/_stack.scss
@@ -7,3 +7,10 @@
 .w-stack * + * {
     margin-top: 1rem;
 }
+
+
+.h-stack {
+    display: flex;
+    flex-direction: column;
+    margin-top: 1rem;
+}
