--- a/src/scss/kurva.scss
+++ b/src/scss/kurva.scss
@@ -156,6 +156,7 @@ pre > code {
 @import 'pages/feeds/model-dan-grid.scss';
 @import 'pages/feeds/iklan-majalah.scss';
 @import 'pages/feeds/jadwal-elegan-bandara.scss';
+@import 'pages/feeds/order-dessert.scss';
 
 @import 'utilities/flow';
 @import 'utilities/region';
