--- a/src/scss/pages/feeds/order-dessert.scss
+++ b/src/scss/pages/feeds/order-dessert.scss
@@ -1,6 +1,105 @@
 
-#dessert-page {
+// Alternative Tabs
+
+.tab-panels {
     background-color: rgb(239, 189, 143);
+}
+
+#tab-lists {
+    /* border-bottom: 1px solid black; */
+    padding: 1rem;
+    max-width: 600px;
+    margin: 0 auto;
+    /* margin-top: 1rem; */
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    display: flex;
+}
+
+#tab-items {
+    margin: 0 auto;
+}
+
+#tab-lists span {
+    padding: 1rem;
+    font-size: 24px;
+}
+
+.tab-item {
+    background-color: black;
+    border-radius: 1rem;
+    color: white;
+    margin-right: 1rem;
+}
+
+.tab-item-selected {
+    background-color: white;
+    color: black;
+
+}
+
+#dessert-info {
+    padding-top: 12rem;
+    padding-bottom: 12rem;
+    font-size: 24px;
+}
+
+#dessert-intro {
+    border-bottom: 2px solid black;
+}
+
+#dessert-store {
+    background-color: black;
+    color: white;
+    max-width: 250px;
+    padding: 2rem;
+    border-radius: 2rem;
+}
+
+.dessert-cover {
+    display: grid;
+    grid-template-columns: 3fr 3fr 3fr 3fr;
+    grid-template-rows: 200px 200px 200px 200px;
+
+    img {
+        grid-column: 1 / 5;
+        z-index: 1;
+        min-height: 800px;
+        object-fit: cover;
+    }
+}
+
+#des-slogan {
+    background-color: yellow;
+    padding: 2em;
+    border-radius: 14rem;
+    max-width: 200px;
+    justify-self: center;
+    grid-row: 2 / 3;
+    grid-column: 2 / 4; 
+    z-index: 2;
+    font-size: 25px;
+    text-align: center;
+    font-weight: 400;
+}
+
+// 
+
+#dessert-list, #coffee-list {
+    --auto-grid-min-item-size: 22rem;
+}
+
+
+#dessert-page {
+    background-color: rgb(227, 206, 173);
+    // background-color: white;
+    --edges-space: 0rem;
+}
+
+.dessert-filters {
+    display: flex;
+    justify-content: center;
+    --region-space: 2rem;
 }
 
 #dessert-slot {
@@ -14,24 +113,51 @@
 
 #dessert-heading, #coffee-heading {
     text-align: center;
-    border: 1px solid black;
     padding: 1rem;
     border-radius: 30px;
     font-weight: 400;
-    font-size: 50px;
+    font-size: 28px;
+}
+
+.dessert-cat {
+    display: inline-block;
+    vertical-align: middle;
+    background: transparent;
+    font-size: 28px;
+    color:rgb(123, 0, 10);
+    border: none;
+    appearance: none;
+    cursor: pointer;
+    padding: 0.55rem 0.7rem;
+
+    @include apply-utility('font', 'serif');
+
+
+    &:hover {
+        border-bottom: 2px solid rgb(123, 0, 10);
+    }   
 }
 
 .dessert__item {
     color: rgb(123, 0, 10);
     cursor: pointer;
     text-align: center;
+    display: flex;
+    align-items: center;
+    flex-flow: column;
+    text-align: center;
+    // transition: opacity 1s ease;
+    // opacity: 0;
+    opacity: 1;
+    transition: opacity $global-transition-fade;
 }
 
 .dessert__item-cover {
     max-height: 500px;
-    max-width: 400px;
+    min-width: 400px;
     object-fit: cover;
     object-position: center;
+    border-radius: 2rem;
     // margin: 1rem;
 }
 
