--- a/src/scss/kurva.scss
+++ b/src/scss/kurva.scss
@@ -157,6 +157,7 @@ pre > code {
 @import 'pages/feeds/iklan-majalah.scss';
 @import 'pages/feeds/jadwal-elegan-bandara.scss';
 @import 'pages/feeds/order-dessert.scss';
+@import 'pages/feeds/undangan-digital';
 
 @import 'utilities/flow';
 @import 'utilities/region';
