--- a/src/scss/_tokens.scss
+++ b/src/scss/_tokens.scss
@@ -24,7 +24,7 @@ $gorko-space-scale: (
 $gorko-fonts: (
   "base": "Segoe UI,system-ui,-apple-system,sans-serif",
   "serif": " Iowan Old Style, Apple Garamond, Baskerville, Times New Roman, Droid Serif, Times, Source Serif Pro, serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol",
-  "mono": "SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace",
+  "mono": "PlexMono,SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace",
 );
 
 $global-transition-fade: 400ms ease;
