--- a/src/site/content/feeds/invitation-digital.njk
+++ b/src/site/content/feeds/invitation-digital.njk
@@ -7,24 +7,25 @@ tags:
     - intermediate
 ---
 
+{% include "partials/transition-scroll.njk" %}
 
 <div id="undangan-page">
     <div id="undangan-intro" class="region wrapper all-center">
         <img alt="Flower of Weeding" src="/images/feeds/bunga-utama-weeding-of.png"></img>
-        <h1>Name & Name</h1>
+        <h1 class="tag">Name & Name</h1>
     </div>
     <div id="undangan-speech" class="wrapper all-center">
         <div class="w-stack">
-        <h3>Assalamu'alaikum Warahmatullahi Wabarakatuh</h3>
-        <p>Maha suci Allah yang telah menciptakan mahluk-Nya berpasang-pasangan.
+        <h3 class="tag">Assalamu'alaikum Warahmatullahi Wabarakatuh</h3>
+        <p class="tag">Maha suci Allah yang telah menciptakan mahluk-Nya berpasang-pasangan.
             Ya Allah, perkenankanlah kami merangkaikan kasih sayang yang
             kau ciptakan diantara kami untuk mengikuti Sunnah Rasul-Mu dalam
             rangka membentuk keluarga yang sakinah, mawaddah, warahmah.</p>
-        <img alt="Small Flower" src="/images/feeds/small-flower.png"></img>
-        <p>Kami bermaksud untuk menyelenggarakan acara pernikahan kami
+        <img class="tag" alt="Small Flower" src="/images/feeds/small-flower.png"></img>
+        <p class="tag">Kami bermaksud untuk menyelenggarakan acara pernikahan kami
                 dan kami ingin anda menjadi bagian dari hari istimewa kami</p>
         </div>
-        <div id="event-countdown" class="repel edges">
+        <div id="event-countdown" class="repel edges tag">
             <div id="count-day" class="count-item">
                 <h1 id="day"></h1>
                 <h2>Hari</h1>
@@ -45,7 +46,7 @@ tags:
         {% include "partials/countdown-time.njk" %}
         {# <countdown-time></countdown-time> #}
     </div>
-    <div id="istri-keluarga" class="wrapper region">
+    <div id="istri-keluarga" class="wrapper region rag">
         <img class="bunga-border" alt="Bunga Line Footer" src="/images/feeds/bunga-line-footer.png"></img>
         <div class="repel">
         <div class="photo-placeholder">
@@ -59,7 +60,7 @@ tags:
         </div>
         </div>
     </div>
-    <div id="suami-keluarga" class="wrapper region">
+    <div id="suami-keluarga" class="wrapper region tag">
         <div class="repel">
         <div class="keluarga-info">
             <h1>Nama Nama</h1>
@@ -73,14 +74,14 @@ tags:
         </div>
         <img class="bunga-border" alt="Bunga Line Footer" src="/images/feeds/bunga-line-footer.png"></img>
     </div>
-    <div id="undangan-event" class="wrapper all-center region">
+    <div id="undangan-event" class="wrapper all-center region tag">
         <h3>Rangkaian Acara akan diselenggarakan pada:</h3>
         <div id="undangan-date" class="repel region">
             <h1>Minggu</h1>
             <h1>25 Agustus</h1>
             <h1>2022</h1>
         </div>
-        <div id="akad-nikah" class="region w-stack">
+        <div id="akad-nikah" class="region w-stack tag">
             <h1>Akad Nikah</h1>
             <div class="weeding-date all-center w-stack">
                 <img alt="Calendar Icon" src="/images/feeds/calendar-icon.png"></img>
@@ -93,7 +94,7 @@ tags:
                 <h3>Jl. Batununggal, Kab. Bandung, Jawa Barat</h3>
             </div>
         </div>
-        <div id="resepsi-nikah" class="region w-stack">
+        <div id="resepsi-nikah" class="region w-stack tag">
             <h1>Resepsi</h1>
             <div class="weeding-date all-center w-stack">
                 <img alt="Calendar Icon" src="/images/feeds/calendar-icon.png"></img>
@@ -107,12 +108,12 @@ tags:
             </div>
         </div>
     </div>
-    <div id="undangan-greets" class="wrapper all-center region">
+    <div id="undangan-greets" class="wrapper all-center region tag">
         <div class="flower-frame repel">
             <img id="reverse" alt="Bunga Frame Left" src="/images/feeds/bunga-frame.png"></img>
             <img alt="Bunga Frame Right" src="/images/feeds/bunga-frame.png"></img>
         </div>
-        <div class="w-stack">
+        <div class="w-stack tag">
         <h1>Kirim Ucapan</h1>
         <p>"Dan Diantara tanda-tanda kebesaran-Nya ialah diciptakan-Nya untukmu pasangan hidup dari jenismu sendiri supaya kamu mendapatkan ketenangan hati
                 dan dijadikan-Nya kasih sayang diantara kamu sesungguhnya yang demikian menjadi tanda-tanda kebesaran-Nya bagi orang-orang yang berfikir" (Q.S Ar-Ruum : 21)</p>
@@ -124,14 +125,14 @@ tags:
         <h2>Rekening a/n Name<h2>
         </div>
     </div>
-    <div id="undangan-footer" class="wrapper all-center w-stack region">
+    <div id="undangan-footer" class="wrapper all-center w-stack region tag">
         <img alt="Bunga Line Footer" src="/images/feeds/bunga-line-footer.png"></img>
         <h3>Atas kehadiran dan doa restu dari Bapak/Ibu/Saudara/i sekalian kami mengucapkan Terima Kasih</h3>
         <p>Wassalamualaikum Warahmatullahi Wabarakatuh</p>
         <h3>KAMI YANG BERBAHAGIA</h3>
         <h1>Name & Name</h1>
         {# Side Flower Image #}
-        <div class="flower-frame repel">
+        <div class="flower-frame repel tag">
             <img id="reverse" alt="Bunga Frame Left" src="/images/feeds/bunga-frame.png"></img>
             <img alt="Bunga Frame Right" src="/images/feeds/bunga-frame.png"></img>
         </div>
