--- a/src/site/_includes/layouts/main.njk
+++ b/src/site/_includes/layouts/main.njk
@@ -15,7 +15,7 @@ layout: 'layouts/base'
         <div class="wrapper region">
             <div class="all-center">
             <h2>Web Design Experiments Lab</h2>
-            <p>Into the example cases and the recent designs, Kurva is a research and exploring style of web pages and CSS</p>
+            <p>Exploring graphic design, layout and typography into CSS and web pages.</p>
             </div>
         </div>
     </div>
