--- a/src/site/_includes/partials/site-footer.njk
+++ b/src/site/_includes/partials/site-footer.njk
@@ -7,7 +7,7 @@
                 <li>
                     <a href="https://kicikku.com"
                         data-category="Site-Wide Custom Events" data-label="Footer Link (index 1)">
-                        Developed by KICIKKU
+                        Developed by literasibadguy, KICIKKU
                     </a>
                 </li>
                 <li>
