--- a/src/site/_includes/partials/site-header.njk
+++ b/src/site/_includes/partials/site-header.njk
@@ -6,5 +6,5 @@
         <a class="site-header__brand" href="/">
             <h2>Kurva</h2>
         </a>
-        <account-header></account-header>
+        {# <account-header></account-header> #}
 </header>
