--- a/src/site/content/feeds/daily-blog.njk
+++ b/src/site/content/feeds/daily-blog.njk
@@ -1,17 +1,19 @@
 ---
 layout: layouts/base.njk
 title: Daily Artsy Blog with Sidebar
+cover: "./src/images/feeds/daily-fun-journal.jpg"
 tags: 
     - feeds
     - flex
-    - intermediate
+    - basic
+    - in-progress
 ---
 
 <div class="masuk-root region">
 <div class="masuk-home wrapper">
 <header class="masuk-layout-header">
     <a href="/feeds/daily-blog">
-        <img id="masuk-logo" src="/images/masuk-press-logo2.png" />
+        <h2>Your fun entertainment journal</h2>
     </a>
 </header>
 <main class="masuk-layout-main edges">
@@ -19,7 +21,7 @@ tags:
         <div class="masuk-posts">
             <div class="masuk-article w-stack">
                 <div class="article-header w-stack">
-                <a href=""><h1 class="article-title">Elizabeth Peyton pursue her online subscriptions. Onlyfans in her first choice</h1></a>
+                <a href=""><h1 class="article-title">Elizabeth Peyton pursue her online subscriptions. Fansonly in her first choice</h1></a>
                 <p class="article-date">Jan 21, 2022</p>
                 <img class="article-cover" src="/images/feeds/euphoria-cast.webp" />
                 </div>
