--- a/src/site/content/feeds/invitation-digital.njk
+++ b/src/site/content/feeds/invitation-digital.njk
@@ -1,10 +1,12 @@
 ---
 layout: layouts/base.njk
-title: Invitation Digital Name - Name
+title: Indonesian Weeding Digital Invitation - Classic
+cover: "./src/images/feeds/weeding-invitation.jpg"
 tags: 
     - feeds
     - flex
     - intermediate
+    - in-progress
 pageScripts:
     - '/js/invitation-page.js'
 ---
