issues with service workers

--- a/src/site/_includes/layouts/source-page.html
+++ b/src/site/_includes/layouts/source-page.html
@@ -7,7 +7,6 @@ pageScripts:
 {% from 'macros/tag-pills.njk' import tagPills with context %}
 
 
-<access-source>
 <div class="source-page">
     <div class="source-inner wrapper region">
         <header class="region source__header">
@@ -35,11 +34,9 @@ pageScripts:
                  {{ content |  safe }}
             </div>
             <div class="source__footnote">
-                <p>Kunci atau sumber kode hanya menggambarkan eksplorasi untuk membuat setiap halaman HTML</p>
-                <p>Bukan suatu standar pasti untuk kode di atas, modifikasi dan ekspresi sendiri sangat rekomendasi
-                untuk belajar desain CSS</p>
+                <p>Source code of this web page is the part of the process of this work.</p>
+                <p>Not necessary standard for you to follow, your modification and own expression really recommended to learn CSS and HTML</p>
             </div>
         </div>
     </div>
 </div>
-</access-source>
