--- a/src/site/_includes/partials/site-footer.njk
+++ b/src/site/_includes/partials/site-footer.njk
@@ -21,16 +21,24 @@
                         Thanks for the font: Familijen Grotesk, Work Sans, IBM Plex
                     </p>
                 </li>
+                 <li>
+                    <p>
+                        Site built with <a href="https://11ty.dev">Eleventy</a>
+                    </p>
+                </li>
             </ul>
         </div>
         <div class="w-footer">
             <h3>Social</h3>
-            <ul class="w-footer__linkbox-list">
+            <ul class="w-footer__linkbox-list w-stack">
                 <li>
                     <a target="_blank" href="https://instagram.com/kicikku"
                         data-category="Site-Wide Custom Events" data-label="Footer Link (index 1)">
                         @kicikku
                     </a>
+                </li>
+                <li>
+                    <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Us on Ko-fi', '#29abe0', 'T6T6D9A93');kofiwidget2.draw();</script> 
                 </li>
                 <li>
                     <a href="/"
@@ -43,7 +51,7 @@
     <nav class="site-footer__brand-nav">
         <ul class="cluster" role="list">
             <li>
-                <h3>© 2022 Kurva by KICIKKU. Images for material contents are the respective owners</h3>
+                <h3>© 2022 Kurva (BETA) by KICIKKU. Images for material contents are the respective owners</h3>
             </li>
             <li>
                 <a href="/privacy-policy">
